Made code more efficient. Charts only rerender if mode changed. Fixed invisible collapsed navbar in light mode.

--- a/public/css/light_mode.css
+++ b/public/css/light_mode.css
@@ -32,6 +32,10 @@ nav .btn:hover {
     background-color: #FFFFFF;
 }
 
+nav .navbar-toggler {
+    background-color: #AAAAAA;
+}
+
 nav .navbar-toggler:hover {
     background: #BBBBBB;
 }
